# runtime-optimizations-using-compiler-and-machine-learning-algorithms

./: READ_ME.txt  example_visitor.cpp
Exec_Policy_Optimization/: CMakeLists.txt  algorithm.hpp  execution_policy.hpp  main.cpp  seq_or_par.hpp
Exec_Policy_Optimization/casual_test/hpx_with_clang/: CMakeLists.txt  read_me
Exec_Policy_Optimization/casual_test/param_determination/: chunk_size_determination.hpp  main.cpp  reading_learning_weights.hpp  seq_or_par.hpp
Exec_Policy_Optimization/casual_test/prefetching_example/: main.cpp
Exec_Policy_Optimization/casual_test/prefetching_nbody/: CMakeLists.txt  nbody.cpp  read_me
Exec_Policy_Optimization/clang_files_examples/: main.cpp
Exec_Policy_Optimization/creating_data/: gather_data.sh
Exec_Policy_Optimization/creating_data/chunk/: gather_data.sh  main.cpp
Exec_Policy_Optimization/creating_data/functions/: dot_product.hpp  empty.hpp  func.hpp  mat_mat.hpp  mat_mat2.hpp  mat_mat5.hpp  mat_vect.hpp  mat_vect2.hpp
Exec_Policy_Optimization/creating_data/prefetch/: gather_data.sh
Exec_Policy_Optimization/creating_data/revising_data/: main.cpp
Exec_Policy_Optimization/first_test/: CMakeLists.txt  my_test.cpp  test1.cpp
Exec_Policy_Optimization/hpx_files/: compiler_static_information.hpp  for_each.hpp
Exec_Policy_Optimization/hpx_files_adaptive_for_each/: compiler_static_information.hpp
Exec_Policy_Optimization/hpx_files_final/: READ_ME.txt  chunk_size_determination.hpp  execution_policy.hpp  executor_parameters.cpp  for_each.hpp  prefetching.hpp  prefetching_distance_determination.hpp  reading_learning_weights.hpp  seq_or_par.hpp  sequential_execution_wrapper.hpp
Exec_Policy_Optimization/hpx_files_seq_par/: execution_policy.hpp  param_determination.hpp
Exec_Policy_Optimization/other_tests/: gather_data.sh
Exec_Policy_Optimization/other_tests/computed_features/: features.txt
Exec_Policy_Optimization/other_tests/experimental_results/: gather_data.sh
Exec_Policy_Optimization/other_tests/functions/: dot_product.hpp  (+8 more)
Real_applications/matrix_mult/: CMakeLists.txt  gather_data.sh  main.cpp
cmakes/: CMakeLists.txt
ml_data/: CMakeLists.txt  analyze.cpp  gather_data.sh  main.cpp
ml_data/functions/: empty.hpp  func.hpp  mat_mat4.hpp  mat_mat5.hpp  mat_vect2.hpp  sum_up2.hpp
(+114 files in other folders)
